# nuclear_vs_wind_solar_cleanliness

./: .gitignore  CHANGELOG.md  DATA_DICTIONARY.md  README.md  REPORT.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  interpretation_review.yml  issue-template.yml  metric_update.yml  source_correction.yml
.github/workflows/: ci.yml  issue-label-from-template.yml
data/: data_sources.md  grid_carbon_intensity.csv  multimetric_cleanliness_reference.csv
data/processed/: lifecycle_emissions_normalized.csv
data/raw/: lifecycle_emissions_ipcc_ar5.csv
data/regions/: france.json  germany.json  portugal.json
docs/: claim_to_evidence.md  methods_note.md  report_schema.json
notebooks/: 01_lifecycle_rebuttal.ipynb
scripts/: build_dashboard.py  generate_social_article.py  ingest_lifecycle_datasets.py  make_plots.py  run_all.py  run_analysis.py  run_analysis_suite.py  run_claim_classifier.py  run_financing_analysis.py  run_geography_analysis.py  run_multimetric_analysis.py  run_portugal_scenario.py  run_region_scenarios.py
src/energy_cleanliness/: __init__.py  analysis.py  article_generator.py  claim_classifier.py  cleanliness_index.py  dashboard.py  data.py  data_ingestion.py  financing.py  geography.py  model_risk.py  multimetric.py  plotting.py  portugal.py  regions.py  reporting.py  scenarios.py
tests/: test_analysis.py  test_financing.py  test_geography.py  test_model_risk.py  test_multimetric.py  test_regions.py  test_scripts_smoke.py
tests/fixtures/: multimetric_tiny.csv
