[tool.poetry]
name = "energy-cleanliness-rebuttal"
version = "0.1.0"
description = "Data science project testing claims about nuclear, wind and solar lifecycle cleanliness."
authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
readme = "README.md"
packages = [{ include = "energy_cleanliness", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24"
pandas = ">=2.0"
matplotlib = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
jupyter = ">=1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint.per-file-ignores]
# Scripts intentionally manipulate sys.path before importing the package, so
# module-level imports cannot all sit at the top of the file.
"scripts/*" = ["E402"]
